# Final-Project

./: .gitignore  README.md
Hybrid.Heat/ver1.0/: CMakeLists.txt  Doxyfile  README.md  config.h.in  vis3d.m  visiualization.m
Hybrid.Heat/ver1.0/html/: _boundary_conditions__2_d_8hpp.js  _boundary_conditions__2_d_8hpp__dep__incl.map  _boundary_conditions__2_d_8hpp__incl.map  _boundary_conditions__2_d_8hpp_source.html  _boundary_conditions__3_d_8hpp.js  _boundary_conditions__3_d_8hpp__dep__incl.map  _boundary_conditions__3_d_8hpp_source.html  _heat_8hpp.html  _heat_8hpp__dep__incl.map  _heat_8hpp__dep__incl.md5  _heat__2_d_8hpp.html  _heat__2_d_8hpp__dep__incl.md5  _heat__3_d_8hpp.html  _heat__3_d_8hpp.js  _heat__3_d_8hpp__dep__incl.md5  _heat__3_d_8hpp__incl.map  _heat__3_d_8hpp__incl.md5  _initializations_c_8hpp.html  _initializations_c_8hpp.js  _initializations_c_8hpp__dep__incl.map  _initializations_c_8hpp__incl.map  _initializations_c_8hpp__incl.md5  _initializations_c_8hpp_source.html  annotated.html  assert_8hpp.html  assert_8hpp__dep__incl.map  assert_8hpp__incl.md5  base_8hpp.html  base_8hpp__dep__incl.map  base_8hpp__dep__incl.md5  base_8hpp__incl.map  base_8hpp__incl.md5  class_heat__2_d_3_01_t_01_4.html  classfinal__project_1_1mpi_1_1____detail_1_1____array___cart-members.html  classfinal__project_1_1mpi_1_1____detail_1_1____array___cart_a92b6d5ef5f0f8e1af471571a8c587c04_cgraph.md5  classfinal__project_1_1mpi_1_1____detail_1_1____array___cart_aa0d514fc1aa95ec95e9caa44f5588d16_cgraph.map  classfinal__project_1_1mpi_1_1____detail_1_1____array___cart_aa0d514fc1aa95ec95e9caa44f5588d16_cgraph.md5  classfinal__project_1_1mpi_1_1____detail_1_1____array___cart_aaa072feea2dfd45481366cf96a0b6f2f_cgraph.map  classfinal__project_1_1mpi_1_1____detail_1_1____array___cart_aaa072feea2dfd45481366cf96a0b6f2f_cgraph.md5  classfinal__project_1_1mpi_1_1array___cart.html  (+258 more)
Hybrid.Heat/ver1.0/html/search/: all_0.js  all_11.js  all_12.js  all_13.js  all_15.js  all_16.js  all_17.js  all_2.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_c.js  all_e.js  classes_0.js  classes_3.js  classes_5.js  classes_6.js  classes_8.js  defines_0.js  defines_4.js  enumvalues_1.js  files_0.js  files_1.js  files_5.js  files_7.js  files_9.js  files_a.js  functions_0.js  functions_10.js  functions_2.js  functions_5.js  functions_8.js  functions_a.js  functions_d.js  functions_e.js  functions_f.js  namespaces_2.js  related_0.js  (+20 more)
Hybrid.Heat/ver1.0/include/: assert.hpp  helper.hpp  multiarray.hpp  types.hpp
Hybrid.Heat/ver1.0/include/mpi/: assert.hpp  environment.hpp  multiarray.hpp  topology.hpp  types.hpp
Hybrid.Heat/ver1.0/include/multiarray/: base.hpp  types.hpp
Hybrid.Heat/ver1.0/include/pde/: Heat.hpp  HeatEquation.hpp  pde.hpp
Hybrid.Heat/ver1.0/include/pinn/: dataset.hpp  pinn.hpp  types.hpp
Hybrid.Heat/ver1.0/latex/: _boundary_conditions__3_d_8hpp__dep__incl.md5  _boundary_conditions__3_d_8hpp__incl.md5  _boundary_conditions__3_d_8hpp_source.tex  _heat_8hpp__dep__incl.md5  _heat_8hpp__incl.md5  _heat__2_d_8hpp.tex  _heat__2_d_8hpp__dep__incl.md5  _heat__2_d_8hpp__incl.md5  _heat__2_d_8hpp_source.tex  _heat__3_d_8hpp.tex  _heat__3_d_8hpp__incl.md5  _heat__3_d_8hpp_source.tex  _initializations_c_8hpp__incl.md5  _initializations_c_8hpp_source.tex  annotated.tex  assert_8hpp.tex  assert_8hpp__dep__incl.md5  base_8hpp.tex  base_8hpp__dep__incl.md5  class_heat__2_d_3_01_t_01_4.tex  classarray___cart.tex  classfinal__project_1_1mpi_1_1____detail_1_1____array___cart.tex  classfinal__project_1_1mpi_1_1array___cart_a10372791f0c9a7d7f834705c0c03f1b2_icgraph.md5  classfinal__project_1_1mpi_1_1array___cart_a1d3a32438e5f76cdd902521a1d5aa815_cgraph.md5  classfinal__project_1_1mpi_1_1array___cart_aca3729e4643a875e5f886434e16aa7f6_icgraph.md5  classfinal__project_1_1multi__array_1_1____detail_1_1____array.tex  classfinal__project_1_1multi__array_1_1____detail_1_1____array_a2cb702a125809541cf37d39952d10ecc_icgraph.md5  classfinal__project_1_1multi__array_1_1____detail_1_1____array_a4510e1b2f84783d123b8c8d410e12a15_cgraph.md5  classfinal__project_1_1multi__array_1_1____detail_1_1____array_a468ec7eea119519a9c78262836826fed_cgraph.md5  classfinal__project_1_1multi__array_1_1____detail_1_1____array_a69931b9f2a7e6468e962ddf69257fb6f_icgraph.md5  classfinal__project_1_1multi__array_1_1____detail_1_1____array_ac459ca6532fa58362bef58f8185ac9ac_cgraph.md5  classfinal__project_1_1multi__array_1_1____detail_1_1____array_ac459ca6532fa58362bef58f8185ac9ac_icgraph.md5  classfinal__project_1_1multi__array_1_1____detail_1_1____array_ae5bee0bb2b0da5a2426091e06da0ff98_icgraph.md5  classfinal__project_1_1multi__array_1_1array__base.tex  classfinal__project_1_1multi__array_1_1array__base_a11bb092304d9b3e5941e29b849a11d3d_icgraph.md5  classfinal__project_1_1multi__array_1_1array__base_a84cb40b1cad2968b6abb29b18b97562f_icgraph.md5  classfinal__project_1_1multi__array_1_1array__base_ac80e4edd192e5794df6067bcbe743b47_cgraph.md5  classfinal__project_1_1pde_1_1_boundary_conditions__2_d_afc86bbda2ba2d988b34c78ab71cdf265_cgraph.md5  classfinal__project_1_1pde_1_1_boundary_conditions__3_d.tex  classfinal__project_1_1pde_1_1_boundary_conditions__3_d_a50d32b4bcc000ab67db0b985a5d49f8d_cgraph.md5  (+104 more)
Hybrid.Heat/ver1.0/main1/: main1.cpp  main1_3d.cpp
Hybrid.Heat/ver1.0/main2/: datagen.cpp  main2.cpp  main2_3d.cpp
Hybrid.Heat/ver1.0/src/: boundary.m  helper.cpp  loadFromBinary.m  multiarray.cpp  saveToBinary.m  vis2d.m  vis3d.m  visdataset.m
Hybrid.Heat/ver1.0/src/mpi/: environment.cpp  types.cpp
Hybrid.Heat/ver1.0/src/multiarray/: types.cpp
Hybrid.Heat/ver1.0/src/pinn/: dataset.cpp  helper.cpp
Hybrid.Heat/ver1.0/test/: test.cc
MPI.Heat/C++.Heat/ver5.0/: CMakeLists.txt  evolve.hpp  hybrid.cpp  hybrid_2.cpp  hybrid_2d.cc  hybrid_2d_2.cc  hybrid_3d.cc  hybrid_3d_2.cc  main.cc  pure_mpi1_2d.cc  pure_mpi1_3d.cc  update.hpp
MPI.Heat/C++.Heat/ver5.0/include/: array.hpp  assert.hpp  mpi_topology.hpp  (+2 more)
PIDNN/ver3.0/: CMakeLists.txt  README.md  autograd.cpp  main.cc  minist.cpp  pinn_2d.cpp  pinn_pde_solver.cpp  pinn_pde_solver.py
(+870 files in other folders)
